# GabesPythonToolBox

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ChangeLog.md  LICENSE  MANIFEST.in  README.md  __init__.py  folder_tree.txt  pyproject.toml  requirements.in  setup.py
.github/workflows/: ci.yml  publish-pypi.yml
ControllSoftwere/StateMachine/: BaseState.py  NoneState.py  StateLoader.py  StateMachine.py  StateManager.py  StateSwitcher.py
DataProsesing/: DataConsolPrinter.py  DataFormater.py  DataHelperFunctions.py  DataPrettifyer.py  DataRW.py  FrameHandler.py  PID.py  README.md  csvDataPipeline.py  csvReader.py  filter.py  map.py
GabesPythonToolBox/DataProsesing/: DataConsolPrinter.py  (+3 more)
GabrielsToolBoxPython/: README.md
GabrielsToolBoxX/: README.md
Suporting/: contexstManager.py  csvReader.py  csvWriter.py  csvWriterLogger.py  jsonReader.py  jsonWriter.py  serialReader.py  yamlReader.py  yamlWriter.py
TestBed/: Icon.py  pyside6_helloBution.py  pyside6_helloWorld.py
Tests/: __init__.py
UnitTest/: __init__.py
Utility/: Collor.py  ConfigManager.py  Debug.py  DeltaTime.py  Logger.py  SIUnitsConverter.py  StateMachine.py  UnitConverter.py
exsampleFiles/: Collor.py  ConfigManager.json  ConfigManager.py  ConfigManager2.json  ConfigManager3.json  Debug  Debug.py  SIUnitsConverter.py  StateMachine.py  UnitConverter.json  UnitConverter.py  testDeltaTime.py  testDeltaTimer.py  testFilter.py  testMap.py  testPID.py  testcsv.py
testFiles/: testDeltaTime.py  testDeltaTimer.py  testFilter.py  testMap.py  testPID.py
testStuff/: testFilter.py
(+90 files in other folders)
